<resources>
    <string name="key">ee4b0098e53d429d8c2174138170709</string>
    <string name="appid">9c0780d686918b84c38573f287a650ad</string>
    <string name="urlIcon">http://openweathermap.org/img/w/</string>
    <string name="keyGoogle">AIzaSyCfenX_8jV7pWtF8Hoyn46nlBmav3wG1ug</string>
    <string name="app_name">Travel Assistant</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="menu">Menú</string>
    <string name="menu_item1">Home</string>
    <string name="menu_item2">Nueva consulta</string>
    <string name="menu_item3">Historial de consultas</string>
    <string name="menu_item4">Editar Recomendaciones</string>
    <string name="menu_item5">Restaurar Recomendaciones</string>
    <string name="menu_item6">Guía de uso</string>
    <string name="menu_item7">Contacto</string>
    <string name="intro_go_search">Nueva consulta</string>
    <string name="intro_go_historical">Historial</string>
    <string name="intro_go_help">Guía de uso</string>
    <string name="intro_reload">Información meteorológica no disponible. Reintentar.</string>
    <string name="itemcarrousel_minWeather">Temp. Min:</string>
    <string name="itemcarrousel_maxWeather">Temp. Max:</string>
    <string name="itemcarrousel_humidity">Humedad:</string>
    <string name="search_destiny">Indica el destino: (usa el buscador o el mapa)</string>
    <string name="search">Buscar</string>
    <string name="travel_duration">Duración del viaje:</string>
    <string name="housing_type">Tipo de alojamiento:</string>
    <string name="travel_reason">Motivo del viaje:</string>
    <string name="transport_type">Tipo de transporte:</string>
    <string name="obtain_recommendations">Obtener recomendaciones</string>
    <string name="loading">Cargando</string>
    <string name="title_error">Todos los campos son obligatorios</string>
    <string name="text_error">"Por favor introduzca el destino de su viaje"</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="exit">Salir</string>
    <string name="reset">Reintentar</string>
    <string name="title_error_service">Error</string>
    <string name="text_error_service">"En servicio climatológico no está disponible, por favor inténtelo más tarde."</string>
    <string name="text_error_geocode">"En servicio de geolocalización no está disponible, por favor inténtelo más tarde."</string>
    <string name="title_error_red">Error de red</string>
    <string name="text_error_red">"No hay acceso a internet. Esta operativa no está disponible."</string>
    <string name="title_tab1">Tiempo Histórico</string>
    <string name="title_tab2">Tiempo en tu viaje</string>
    <string name="title_tab3">Recomendaciones</string>
    <string name="url_weather">Tiempo ofrecido por http://www.worldweatheronline.com</string>
    <string name="month_1">Enero</string>
    <string name="month_2">Febrero</string>
    <string name="month_3">Marzo</string>
    <string name="month_4">Abril</string>
    <string name="month_5">Mayo</string>
    <string name="month_6">Junio</string>
    <string name="month_7">Julio</string>
    <string name="month_8">Agosto</string>
    <string name="month_9">Septiembre</string>
    <string name="month_10">Octubre</string>
    <string name="month_11">Noviembre</string>
    <string name="month_12">Diciembre</string>
    <string name="weather_today">Tiempo actual</string>
    <string name="last_update">Última actualización:</string>
    <string name="temperature">Temperatura:</string>
    <string name="wind">Viento:</string>
    <string name="humidity">Humedad:</string>
    <string name="thermal_sensation">Sensación térmica:</string>
    <string name="empty_field">--</string>
    <string name="use_app_title">¿Cómo usar esta App?</string>
    <string name="use_app_text">TravelAssistan busca información sobre el clima de su destino vacacacional, y en función de los resultados y de su tipo de viaje, le ofrece recomendaciones para que no olvide nada en su maleta.\n\n
    La experiencia es personalizable, de forma que las recomendaciones que la aplicación le ofrece se adaptaran exáctamente a lo que necesite.\n\n
    Su uso es fácil e intuitivo, pero si tiene alguna duda no dude en contactar con el equipo de desarrollo de Travel Assitant.</string>
    <string name="use_app_expl_1">Con la sección \"NUEVA CONSULTA\" podrás obtener nuevas recomendaciones.\n\n
    Para que la aplicación pueda aconsejarle de forma precisa, es necesario que introduzca una serie de parámetros, tales como la duración o el motivo del viaje.\n\n
    Esta información no se comparte con ninguna empresa o entidad externa, y su única finalidad es aportarle recomendaciones más efectivas.\n\n
    Si la búsqueda ha tenido éxito podrá observar un listado con las recomendaciones para su viaje en función de los parámetros especificados.\n\n
    Como siempre, tienes el control para modificar esta lista a tu criterio, marcando las recomendaciones como pendientes/realizadas, o eliminando aquellas que no consideres interesantes.\n\n
    Al final del listado, se mostrarán las recomendaciones personalizadas de tu consulta. Aquí puedes añadir todas las recomendaciones que necesites y que solo quieres que afecten a tu consulta actual.\n\n
    Además, podrá consultar la información detalla sobre el clima en los días de su viaje, así como un histórico del clima por meses para la localización seleccionada.</string>
    <string name="use_app_expl_1_2">Y si lo no necesitas, puedes activar una notificación referente a tu búsqueda para que recuerdes lo que necesites.
    Solo has de buscar el icono de notificaciones y rellenar los campos correspondientes.</string>
    <string name="use_app_expl_2">Con la sección \"VER HISTORIAL DE CONSULTAS\" podrás consultar resultados de búsquedas anteriores.\n\n
    Puesto que la información meteorológica es cambiante, en el historial simplemente verá un resumen de la información que se obtuvo en el momento de la búsqueda, haciendo especial hincapié en su lista de recomendaciones.</string>
    <string name="use_app_expl_2_2">Por ese motivo, si lo necesitas puedes actualizar tu consulta pulsando en el botón de "refrescar consulta".</string>
    <string name="use_app_expl_2_3">Queda en tu mano la gestión del listado de recomendaciones (puedes añadir nuevas, borrars las existentes, etc).\n\n
    Al igual que en la sección \"NUEVA CONSULTA\", puedes editar las notificaciones cuando lo desees.\n\n
    Solo puedes activar una notificación por consulta, aunque si lo deseas puedes personalizarlas para no olvidar nada.\n\n
    Por otro lado, la aplicación si acepta notificaciones simultáneas si son de consultas diferentes.</string>
    <string name="use_app_expl_2_4">Cualquier elemento que marque en la lista será almacenado como "Realizado", para que pueda hacer un seguimiento de lo que tiene y de lo que le falta por incluir en su equipaje.\n\n
    Para que la aplicación no ocupe demasiado espacio en su dispositivo, se almacenarán un máximo de 10 búsquedas. Si se alcanza esa cifra, cuando se realice una nueva consulta, se borrará la búsqueda almacenada más antigua. \n\n
    Si usted lo desea puede borrar sus búsquedas guardadas manualmente.</string>
    <string name="use_app_expl_3">Con la sección \"EDITAR RECOMENDACIONES\" puedes crear tus propias recomendaciones  o modificar las ya existentes para que la app las incluya en sus resultados.\n\n
    Si deseas modificar una recomendación solo has de pinchar sobre ella y modificar el campo deseado.\n\n
    Si deseas añadir una nueva, debes pulsar sobre el icono de "Añadir" de la parte superior de la pantalla.</string>
    <string name="use_app_expl_4">Con la sección \"RESTAURAR RECOMENDACIONES\" retornarás la aplicación a su estado inicial,restaurando todas las recomendaciones por defecto.\n\n
        *IMPORTANTE:Se eliminarán todas las recomendaciones personalizadas y el historial de consultas.</string>
    <string name="use_app_expl_weather">Toda la información climatológica es ofrecida por http://www.worldweatheronline.com y https://openweathermap.org</string>
    <string name="use_app_expl_help">Si desea realizar cualquier comentario acerca del funcionamiento de la APP, acceda a la sección \"CONTACTO\".</string>
    <string name="title_recom_0">"Recomendaciones básicas:"</string>
    <string name="title_recom_1">"Has indicado que tu viaje durará menos de 3 días, deberías tener en cuenta:"</string>
    <string name="title_recom_2">"Has indicado que tu viaje durará entre 4 y 7 días, deberías tener en cuenta:"</string>
    <string name="title_recom_3">"Es un viaje de placer:"</string>
    <string name="title_recom_4">"El viaje es por trabajo."</string>
    <string name="title_recom_5">"Vas a un Hotel/Hostal:"</string>
    <string name="title_recom_6">"Has decidido alojarte en una casa de alquiler, quizás necesites:"</string>
    <string name="title_recom_7">"Te alojaras en tu casa (o en la de un amigo/familiar)."</string>
    <string name="title_recom_8">"En algunos momentos de tu viaje puede que llueva, nieve o granice."</string>
    <string name="title_recom_9">"Recomendaciones para bajas temperaturas:"</string>
    <string name="title_recom_10">"Recomendaciones para altas temperaturas:"</string>
    <string name="title_recom_11">"Viajarás en tu propio vehículo."</string>
    <string name="title_recom_12">"Tienes plaza en un Avión, Barco, Tren o Autobús."</string>
    <string name="critery_1">"1 a 3 días"</string>
    <string name="critery_2">"4 a 7 días"</string>
    <string name="critery_3">"Ocio"</string>
    <string name="critery_4">"Trabajo"</string>
    <string name="critery_5">"Hotel/Hostal"</string>
    <string name="critery_6">"Casa en alquiler"</string>
    <string name="critery_7">"Casa propia"</string>
    <string name="critery_11">"Vehículo propio"</string>
    <string name="critery_12">"Avión, barco, tren, autobús"</string>
    <string name="title_weather">"Recomendaciones según la temperatura esperada:"</string>
    <string name="title_recom_weather_rain">"Se esperan precipitaciones."</string>
    <string name="title_recom_weather_cold">"Habrá bajas temperaturas."</string>
    <string name="title_recom_weather_hot">"Habrá altas temperaturas."</string>
    <string name="title_recom_no_recom">"Se esperan temperaturas suaves, no hay avisos reseñables."</string>
    <string name="filed_text_title">Texto:</string>
    <string name="field_category_title">Categoria:</string>
    <string name="filed_visibility_title">Visibilidad:</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_save">Guardar</string>
    <string name="title_alert_save">Guardar Recomendación</string>
    <string name="text_alert_save">"¿Está seguro que deseas realizar los cambios?"</string>
    <string name="title_alert_desc">Campo vacío</string>
    <string name="restore_text1">La restauración de las recomendaciones ha sido llevada a cabo con éxito.</string>
    <string name="restore_text2">¿Qué desea hacer ahora?</string>
    <string name="button_go_home">Home</string>
    <string name="button_go_edit">Editar recomendaciones</string>
    <string name="button_go_search">Nueva consulta</string>
    <string name="title_custom_recoms_create">Crear Recomendación</string>
    <string name="description_custom_recoms">Descripción:</string>
    <string name="scheduled_switch">Estado (Activa/Desactiva)</string>
    <string name="scheduled_hour">Hora</string>
    <string name="scheduled_hour_default">12:00</string>
    <string name="scheduled_type">Tipo de mensaje:</string>
    <string name="scheduled_recom">Recomendación del recordatorio:</string>
    <string name="scheduled_text">Mensaje:</string>
    <string name="scheduled_type_def_desc">Recuerde revisar la lista de recomendaciones para su viaje a</string>
</resources>