<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="proyect.travelassistant.fragments.FragmentScheduleNotification"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_custom_recoms_create"
        style="@style/Style_Recoms_Title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/description_custom_recoms"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/customRecomEt"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="120dp"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:background="@color/colorBackgroundScheduleText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancelCustomRecomCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_btn"
            android:text="@string/button_cancel"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/buttonSaveCustomRecomCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_btn"
            android:text="@string/button_save"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold" />
    </LinearLayout>

</LinearLayout>
