<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/activity_add_recom"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">

<LinearLayout android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="0px"
    android:layout_height="0px" >
    <requestFocus />
</LinearLayout>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:text="@string/filed_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTitleAddRecomTxt"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:textSize="11dp"
        android:id="@+id/editTextAddRecomTxt"
        android:background="@drawable/custom_edit_text"/>

    <TextView
        android:text="@string/field_category_title"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTitleAddRecomCat"
        android:layout_marginBottom="5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_spinner"
        android:orientation="horizontal"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20dp">

        <Spinner
            android:id="@+id/spinner_add_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:spinnerMode="dropdown" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/spinner" />
    </RelativeLayout>

    <TextView
        android:text="@string/filed_visibility_title"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewVisivilityAddRecomCat"
        android:layout_marginBottom="5dp"/>

    <Switch
        android:text=""
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchAddRecom"
        android:layout_marginLeft="20dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCancelAddRecom"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_btn"
            android:textStyle="normal|bold"
            android:layout_margin="5dp"/>

        <Button
            android:text="@string/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSaveAddRecom"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_btn"
            android:textStyle="normal|bold"
            android:layout_margin="5dp"/>
    </LinearLayout>
</LinearLayout>

</LinearLayout>
